--- a/Portfolio.css
+++ b/Portfolio.css
@@ -22,6 +22,12 @@ html,body{
   content : "";
   display : block;
 }
+.slider-wrap{
+  box-sizing : border-box ;
+}
+.sloder{
+  box-sizing : border-box ;
+}
 .content{
   height : 100vh ;
   box-sizing : border-box ;
@@ -149,3 +155,145 @@ html,body{
   transform : rotate(-35deg) translate(-5%,-30%);
 }
 /* first-chapter end */
+/* personal-data start */
+.slider-wrap > .slider > .personal-data{
+  position : relative ;
+}
+
+.slider-wrap > .slider > .personal-data > .main-txt{
+  writing-mode : vertical-rl ;
+  text-orientation : upright ;
+  font-size : 50px ;
+  position : absolute ;
+  top : 30% ;
+  left : 10% ;
+  transform : translate(-10%,-30%) ;
+}
+
+.slider-wrap > .slider > .personal-data > .img-box{
+  width : 23% ;
+  padding-bottom : 23% ;
+  background-color : rgba(241,185,185) ;
+  border-radius : 50% ;
+  position : absolute ;
+  top : 40% ;
+  left : 30% ;
+  transform : translate(-30%,-40%) ;
+}
+
+.slider-wrap > .slider > .personal-data > .data-box{
+  width : 40% ;
+/*   padding-bottom : 23% ; */
+  position : absolute ;
+  top : 40% ;
+  right : 5% ;
+  transform : translate(-5%,-40%) ;
+  box-sizing : border-box ;
+}
+
+.slider-wrap > .slider > .personal-data > .data-box > .txt-wrap{
+  margin-bottom : 5% ;
+}
+
+.slider-wrap > .slider > .personal-data > .data-box > .txt-wrap:nth-child(3){
+  margin-bottom : 10% ;
+}
+
+.slider-wrap > .slider > .personal-data > .data-box > .txt-wrap:nth-child(5){
+  margin-bottom : 0 ;
+}
+
+.slider-wrap > .slider > .personal-data > .data-box > .txt-wrap > .txt-bar{
+  border-bottom : 5px rgba(241,185,185) solid ;
+}
+
+.slider-wrap > .slider > .personal-data > .data-box > .txt-wrap > .txt-bar > p{
+  font-size : 25px ;
+  width : 25% ;
+}
+
+.slider-wrap > .slider > .personal-data > .data-box > .txt-wrap > .txt-bar > .txt{
+  margin-left : 20% ;
+  font-size : 20px ;
+}
+/* personal-data end */
+/* other-data start */
+.slider-wrap > .slider > .other-data{
+  position : relative ;
+}
+
+.slider-wrap > .slider > .other-data > .main-txt{
+  writing-mode : vertical-rl ;
+  text-orientation : upright ;
+  font-size : 50px ;
+  position : absolute ;
+  top : 30% ;
+  left : 10% ;
+  transform : translate(-10%,-30%) ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap{
+  width : 35% ;
+  padding-bottom : 45% ;
+  position : absolute ;
+  top : 50% ;
+  left : 50% ;
+  transform : translate(-50%,-50%) ;
+  box-sizing : border-box ;
+  background-color : rgba(241,185,185) ;
+  position : relative ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper{
+  width : 90% ;
+  height : 90% ;
+  position : absolute ;
+  top : 50% ;
+  left : 50% ;
+  transform : translate(-50%,-50%) ;
+  box-sizing : border-box ;
+  background-color : rgba(254,234,234) ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper > .title{
+  height : 10% ;
+  font-size : 25px ;
+  text-align : center ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper > .list{
+  height : 85% ;
+  box-sizing : border-box ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper > .list > .txt-wrap > .txt-bar{
+  margin-bottom : 5% ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper > .list > .txt-wrap > .txt-bar > .box{
+  width : 30px ;
+  height : 30px ;
+  background-color : rgba(241,185,185) ;
+  margin-right : 20% ;
+  margin-left : 5% ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper > .list > .txt-wrap > .txt-bar > .txt{
+  font-size : 20px ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper > .page-number{
+  height : 5%;
+  text-align : center ;
+  font-size : 20px ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .btn{
+  width : 15% ;
+  height : 10% ;
+  position : absolute ;
+  top : 0 ;
+  right : 0 ;
+  background-color : gray ;
+}
+/* other-data end */
