--- a/Portfolio.css
+++ b/Portfolio.css
@@ -270,6 +270,11 @@ html,body{
   margin-bottom : 5% ;
 }
 
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper > .list > .txt-wrap > .txt-bar:last-child{
+  margin-bottom : 0 ;
+}
+
 .slider-wrap > .slider > .other-data > .diary-wrap > .paper > .list > .txt-wrap > .txt-bar > .box{
   width : 30px ;
   height : 30px ;
@@ -288,12 +293,65 @@ html,body{
   font-size : 20px ;
 }
 
-.slider-wrap > .slider > .other-data > .diary-wrap > .btn{
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper02{
+  opacity : 0 ;
+  visibility : hidden ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper02.active{
+  opacity : 1 ;
+  visibility : visible ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper03{
+  opacity : 0 ;
+  visibility : hidden ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper03.active{
+  opacity : 1 ;
+  visibility : visible ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper03 > .out{
+  width : 20% ;
+  height : 30% ;
+  position: absolute ;
+  top : -20% ;
+  right : -10% ;
+  transform : translate(-20%,10%) ;
+  background-color : rgba(241,185,185) ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper03 > .in{
   width : 15% ;
-  height : 10% ;
+  height : 20% ;
+  background-color : rgba(254,234,234) ;
   position : absolute ;
   top : 0 ;
   right : 0 ;
-  background-color : gray ;
+}
+
+.slider-wrap > .slider > .other-data > .diary-wrap > .paper03 > .list > .txt-wrap > .txt-bar > .img-box{
+  width : 10% ;
+  padding-bottom : 10% ;
+  background-color : yellow ;
+  margin-right : 5% ;
+  margin-left : 5% ;
 }
 /* other-data end */
+/* web-project start */
+.slider-wrap > .slider > .web-project{
+  position : relative ;
+}
+
+.slider-wrap > .slider > .web-project > .main-txt{
+  writing-mode : vertical-rl ;
+  text-orientation : upright ;
+  font-size : 50px ;
+  position : absolute ;
+  top : 30% ;
+  left : 10% ;
+  transform : translate(-10%,-30%) ;
+}
+/* web-project end */
