--- a/Portfolio.css
+++ b/Portfolio.css
@@ -354,4 +354,105 @@ html,body{
   left : 10% ;
   transform : translate(-10%,-30%) ;
 }
+
+
+.slider-wrap > .slider > .web-project > .diary-wrap{
+  width : 35% ;
+  padding-bottom : 45% ;
+  position : absolute ;
+  top : 50% ;
+  left : 50% ;
+  transform : translate(-50%,-50%) ;
+  box-sizing : border-box ;
+  background-color : rgba(241,185,185) ;
+  position : relative ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper{
+  width : 90% ;
+  height : 90% ;
+  position : absolute ;
+  top : 50% ;
+  left : 50% ;
+  transform : translate(-50%,-50%) ;
+  box-sizing : border-box ;
+  background-color : rgba(254,234,234) ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper > .txt-wrap{
+  width : 100% ;
+  height : 10% ;
+  box-sizing : border-box ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper > .txt-wrap > .day-box{
+  width : 25% ;
+  height : 100% ;
+  text-align : center ;
+  font-size : 18px ;
+  line-height : 300% ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper > .txt-wrap > .day-box:first-child{
+  margin-left : 5% ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper > .txt-wrap > .box{
+  width : 5% ;
+  height : 100% ;
+  text-align : center ;
+  text-align : center ;
+  line-height : 300% ;
+  margin-left : 5% ;
+  margin-right : 5% ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper > .information-wrap{
+  width : 100% ;
+  height : 90% ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper > .information-wrap > .left-wrap{
+  width : 50% ;
+  height : 100% ;
+  box-sizing : border-box ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper > .information-wrap > .left-wrap > .img-box{
+  margin : 0 auto ;
+  width : 80% ;
+  padding-bottom : 60% ;
+  background-color : gray ;
+  margin-top : 20% ;
+  margin-bottom : 50% ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper > .information-wrap > .left-wrap > .img-box:first-child{
+  transform : rotate(20deg) ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper > .information-wrap > .left-wrap > .img-box:last-child{
+  transform : rotate(-20deg) ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper > .information-wrap > .left-wrap > .move-box{
+  background-color : gray ;
+  transform : rotate(20deg) translate(-20%,-50%);
+  position : absolute ;
+  top : 50% ;
+  left : 20% ;  ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper > .information-wrap > .right-wrap{
+  width : 50% ;
+  height : 100% ;
+  box-sizing : border-box ;
+}
+
+.slider-wrap > .slider > .web-project > .diary-wrap > .paper > .information-wrap > .right-wrap > .txt-bar{
+  width : 100% ;
+  height : 10% ;
+  box-sizing : border-box ;
+  border-bottom : 2px black solid ;
+}
 /* web-project end */
