--- a/Portfolio.css
+++ b/Portfolio.css
@@ -456,3 +456,301 @@ html,body{
   border-bottom : 2px black solid ;
 }
 /* web-project end */
+/* art-work start */
+.slider-wrap > .slider > .art-work{
+  position : relative ;
+}
+
+.slider-wrap > .slider > .art-work > .main-txt{
+  writing-mode : vertical-rl ;
+  text-orientation : upright ;
+  font-size : 50px ;
+  position : absolute ;
+  top : 30% ;
+  left : 10% ;
+  transform : translate(-10%,-30%) ;
+}
+
+.slider-wrap > .slider > .art-work > .diary-wrap{
+  width : 70% ;
+  padding-bottom : 45% ;
+  background-color : rgba(241,185,185) ;
+  position : absolute ;
+  top : 50% ;
+  left : 70% ;
+  transform : translate(-70%,-50%) ;
+}
+
+.slider-wrap > .slider > .art-work > .diary-wrap > .paper{
+  width : 90% ;
+  height : 90% ;
+  background-color : rgba(254,234,234) ;
+  position : absolute ;
+  top : 50% ;
+  left : 50% ;
+  transform : translate(-50%,-50%) ;
+}
+
+.slider-wrap > .slider > .art-work > .diary-wrap > .paper > .section{
+  width : calc(100%/3) ;
+  height : 100% ;
+  box-sizing : border-box ;
+  border-right : 1px black solid ;
+}
+
+.slider-wrap > .slider > .art-work > .diary-wrap > .paper > .section:last-child{
+  border-right : 0 ;
+}
+
+.slider-wrap > .slider > .art-work > .diary-wrap > .paper > .section > .img-wrap{
+  width : 100% ;
+  height : 25% ;
+  position : relative ;
+  box-sizing : border-box ;
+  border-bottom : 1px solid black ;
+}
+
+.slider-wrap > .slider > .art-work > .diary-wrap > .paper > .section > .img-wrap > .img-box{
+  width : 90% ;
+  height : 90% ;
+  background-color : yellow ;
+  position : absolute ;
+  top : 50% ;
+  left : 50% ;
+  transform : translate(-50%,-50%) ;
+} 
+
+.slider-wrap > .slider > .art-work > .diary-wrap > .paper > .section > .txt-wrap{
+  width : 100% ;
+  height : 75% ;
+  position : relative ;
+}
+
+.slider-wrap > .slider > .art-work > .diary-wrap > .paper > .section > .txt-wrap > .txt-box{
+  width : 90% ;
+  height : 90% ;
+  position : absolute ;
+  top : 50% ;
+  left : 50% ;
+  transform : translate(-50%,-50%) ;
+}
+
+.slider-wrap > .slider > .art-work > .diary-wrap > .paper > .section > .txt-wrap > .txt-box > .wrap > .box{
+  width : 30px ;
+  height : 30px ;
+  background-color : rgba(241,185,185) ;
+  margin-left : 5% ;
+  margin-right : 5% ;
+  margin-top : 15% ;
+  border-radius : 50% ;
+}
+
+.slider-wrap > .slider > .art-work > .diary-wrap > .paper > .section > .txt-wrap > .txt-box > .wrap > .txt{
+  width : 70% ;
+  height : 30px ;
+  box-sizing : border-box ;
+  margin-top : 15% ;
+  font-size : 20px ;
+}
+/* art-work end */
+/* etc start */
+.slider-wrap > .slider > .etc{
+  position : relative ;
+}
+
+.slider-wrap > .slider > .etc > .main-txt{
+  writing-mode : vertical-rl ;
+  text-orientation : upright ;
+  font-size : 50px ;
+  position : absolute ;
+  top : 30% ;
+  left : 10% ;
+  transform : translate(-10%,-30%) ;
+}
+
+.slider-wrap > .slider > .etc > .diary-wrap{
+  width : 70% ;
+  padding-bottom : 45% ;
+  background-color : rgba(241,185,185) ;
+  position : absolute ;
+  top : 50% ;
+  left : 70% ;
+  transform : translate(-70%,-50%) ;
+}
+
+.slider-wrap > .slider > .etc > .diary-wrap > .paper{
+  width : 90% ;
+  height : 90% ;
+  background-color : rgba(254,234,234) ;
+  position : absolute ;
+  top : 50% ;
+  left : 50% ;
+  transform : translate(-50%,-50%) ;
+}
+
+.slider-wrap > .slider > .etc > .diary-wrap > .paper > .section{
+  width : 27% ;
+  padding-bottom : 20% ;
+  background-color : gray ;
+}
+
+.slider-wrap > .slider > .etc > .diary-wrap > .paper > .section01{
+  position : absolute ;
+  transform : rotate(-20deg) translate(-10%,-15%);
+  top : 15% ;
+  left : 10% ;
+}
+
+.slider-wrap > .slider > .etc > .diary-wrap > .paper > .section02{
+  position : absolute ;
+  transform : rotate(25deg) translate(-10%,-15%);
+  right : 10% ;
+  top : 15% ;
+}
+
+.slider-wrap > .slider > .etc > .diary-wrap > .paper > .section03{
+  position : absolute ;
+  transform : rotate(-10deg) translate(-10%,-10%);
+  bottom : 10% ;
+  left : 10% ;
+}
+
+.slider-wrap > .slider > .etc > .diary-wrap > .paper > .section04{
+  position : absolute ;
+  transform : rotate(16deg) translate(-5%,-10%);
+  bottom : 10% ;
+  right : 5% ;
+}
+
+.slider-wrap > .slider > .etc > .diary-wrap > .paper > .section05{
+  position : absolute ;
+  transform : rotate(-5deg) translate(-50%,-50%);
+  top : 50% ;
+  left : 50% ;
+}
+
+.slider-wrap > .slider > .etc > .diary-wrap > .paper > .section > .img-box{
+  width : 100% ;
+  height : 85% ;
+  background-color : yellow ;
+  position : absolute ;
+}
+
+.slider-wrap > .slider > .etc > .diary-wrap > .paper > .section > .txt-box{
+  width : 100% ;
+  height : 15% ;
+  position : absolute ;
+  bottom : 0 ;
+  text-align : center ;
+}
+/* etc end */
+/* contact start */
+.slider-wrap > .slider > .contact{
+  position : relative ;
+}
+
+.slider-wrap > .slider > .contact > .diary-wrap{
+  width : 100% ;
+  height : 100% ;
+/*   background-image : url(https://image.freepik.com/free-vector/grid-background-vector-in-pink-color_53876-128363.jpg) ; */
+  background-image : url(https://image.freepik.com/free-photo/cross-stitch-pattern_23-2148145960.jpg) ;
+  background-position : center ;
+  background-repeat : no-repeat ;
+  background-size : cover ;
+}
+
+.slider-wrap > .slider > .contact > .diary-wrap > .memo{
+  width : 40% ;
+  padding-bottom : 30% ;
+  background-color : gray ;
+  position : absolute ;
+  top : 50% ;
+  left : 50% ;
+  transform : translate(-50%,-50%) ;
+  box-sizing : border-box ;
+}
+
+.slider-wrap > .slider > .contact > .diary-wrap > .memo > ul{
+  position  : absolute ;
+  top : 50% ;
+  left : 50% ;
+  transform : translate(-50%,-50%) ;
+  text-align : center ;
+  font-size : 24px ;
+}
+
+.slider-wrap > .slider > .contact > .diary-wrap > .memo > ul > li{
+  margin-bottom : 15% ;
+}
+/* contact end */
+/* last-chapter start */
+.slider-wrap > .slider > .last-chapter{
+  position : relative ; 
+}
+
+.slider-wrap > .slider > .last-chapter > .diary{
+  width : 35% ;
+  position : absolute ;
+  top : 50% ;
+  left : 50% ;
+  transform : translate(-50%,-50%) ;
+  box-sizing : border-box ;
+  position : relative ;
+}
+
+.slider-wrap > .slider > .last-chapter > .diary > .left{
+  width : 90% ;
+  padding-bottom : 120% ;
+  background-color : rgba(241, 185, 186) ; 
+  box-sizing : border-box ;
+}
+
+.slider-wrap > .slider > .last-chapter > .diary > .right{
+  width : 10% ;
+  padding-bottom : 50% ;
+  box-sizing : border-box ;
+}
+
+.slider-wrap > .slider > .last-chapter > .diary > .right > .menu{
+  width : 20% ;
+  height : 100% ;
+  position : absolute ;
+  left : -20% ;
+  box-sizing : border-box ;
+  text-align : center ;
+} 
+
+.slider-wrap > .slider > .last-chapter > .diary > .right > .menu > ul{
+  height : 100% ;
+}
+
+.slider-wrap > .slider > .last-chapter > .diary > .right > .menu > ul > li{
+/*   padding-bottom : 20% ; */
+  height : 50px ;
+  border : 1px black solid ;
+}
+
+.slider-wrap > .slider > .last-chapter > .diary > .right > .menu > ul > li:nth-child(1) {
+  background-color : rgba(224, 34, 44) ;
+}
+
+.slider-wrap > .slider > .last-chapter > .diary > .right > .menu > ul > li:nth-child(2) {
+  background-color : rgba(249 , 160, 102) ;
+}
+
+.slider-wrap > .slider > .last-chapter > .diary > .right > .menu > ul > li:nth-child(3) {
+  background-color : rgba(208, 76, 149) ;
+}
+
+.slider-wrap > .slider > .last-chapter > .diary > .right > .menu > ul > li:nth-child(4) {
+  background-color : rgba(248, 228, 71) ;
+}
+
+.slider-wrap > .slider > .last-chapter > .diary > .right > .menu > ul > li:nth-child(5) {
+  background-color : rgba(154, 203, 96) ;
+}
+
+.slider-wrap > .slider > .last-chapter > .diary > .right > .menu > ul > li:nth-child(6) {
+  background-color : rgba(51, 175, 227) ;
+}
+/* last-chapter end */
