--- a/Portfolio.css
+++ b/Portfolio.css
@@ -358,6 +358,7 @@ a{
   background-color : rgba(241,185,185) ;
   margin-right : 20% ;
   margin-left : 5% ;
+  border-radius : 50% ;
 }
 
 .slider-wrap .slider > .other-data > .diary-wrap > .paper > .list > .txt-wrap > .txt-bar > .txt{
@@ -490,10 +491,16 @@ a{
 .slider-wrap .slider > .web-project > .diary-wrap > .paper > .information-wrap > .left-wrap > .img-box{
   margin : 0 auto ;
   width : 80% ;
-  padding-bottom : 60% ;
-  background-color : gray ;
+  height : 30% ;
   margin-top : 20% ;
   margin-bottom : 50% ;
+  background-repeat : no-repeat ;
+  background-size : cover ;
+  background-position : center ;
+}
+
+.slider-wrap .slider > .web-project > .diary-wrap > .paper > .information-wrap > .left-wrap > .img-box > img{
+  width : 100% ;
 }
 
 .slider-wrap .slider > .web-project > .diary-wrap > .paper > .information-wrap > .left-wrap > .img-box:first-child{
@@ -600,7 +607,14 @@ a{
   top : 50% ;
   left : 50% ;
   transform : translate(-50%,-50%) ;
+  background-size : cover ;
+  background-repeat : no-repeat ;
+  background-position : center ;
 } 
+
+.slider-wrap .slider > .art-work > .diary-wrap > .paper > .section > .img-wrap > .img-box > img{
+  width : 100% ;
+}
 
 .slider-wrap .slider > .art-work > .diary-wrap > .paper > .section > .txt-wrap{
   width : 100% ;
@@ -636,7 +650,51 @@ a{
 }
 
 .slider-wrap .slider > .art-work > .diary-wrap > .paper > .section > .txt-wrap > .txt-box > .wrap > .color{
-  
+  width : 70% ;
+  height : 40px ;
+  box-sizing : border-box ;
+  margin-top : 15% ;
+  font-size : 20px ;
+}
+
+.slider-wrap .slider > .art-work > .diary-wrap > .paper > .section > .txt-wrap > .txt-box > .wrap > .color > .color-box{
+  width : 15% ;
+  height : 100% ;
+  border-radius : 50% ;
+  margin-right : 5% ;
+  background-color : gray ;
+} 
+
+.slider-wrap .slider > .art-work > .diary-wrap > .paper > .section01 > .txt-wrap > .txt-box > .wrap > .color > .color-box:first-child{
+  background-color : rgba(112, 127, 188) ;
+}
+
+.slider-wrap .slider > .art-work > .diary-wrap > .paper > .section01 > .txt-wrap > .txt-box > .wrap > .color > .color-box:nth-child(2){
+  background : rgba(255, 204, 102) ;
+}
+
+.slider-wrap .slider > .art-work > .diary-wrap > .paper > .section01 > .txt-wrap > .txt-box > .wrap > .color > .color-box:nth-child(3){
+  background-color : rgba(236, 192, 111) ;
+}
+
+.slider-wrap .slider > .art-work > .diary-wrap > .paper > .section01 > .txt-wrap > .txt-box > .wrap > .color > .color-box:last-child{
+  background-color : rgba(31, 174, 152) ;
+}
+
+.slider-wrap .slider > .art-work > .diary-wrap > .paper > .section02 > .txt-wrap > .txt-box > .wrap > .color > .color-box:first-child{
+  background-color : rgba(212, 230, 240) ;
+}
+
+.slider-wrap .slider > .art-work > .diary-wrap > .paper > .section02 > .txt-wrap > .txt-box > .wrap > .color > .color-box:nth-child(2){
+  background-color : rgba(21, 183, 195) ;
+}
+
+.slider-wrap .slider > .art-work > .diary-wrap > .paper > .section03 > .txt-wrap > .txt-box > .wrap > .color > .color-box:first-child{
+  background-color : rgba(247, 190, 157) ;
+}
+
+.slider-wrap .slider > .art-work > .diary-wrap > .paper > .section03 > .txt-wrap > .txt-box > .wrap > .color > .color-box:nth-child(2){
+  background-color : rgba(48, 103, 160) ;
 }
 /* art-work end */
 /* etc start */
@@ -687,20 +745,11 @@ a{
   left : 10% ;
 }
 
-.slider-wrap .slider > .etc > .diary-wrap > .paper > .section01 > .img-box{
-  background-image : url(https://raw.githubusercontent.com/leeyoounjung/Portfolio/6dd7ae50d0e9ef3acb262608f175270cf523744a/%EC%BC%84%ED%83%80%EC%9A%B0%EB%A1%9C%EC%8A%A4_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg) ;  
-}
-
 .slider-wrap .slider > .etc > .diary-wrap > .paper > .section02{
   position : absolute ;
   transform : rotate(25deg) translate(-10%,-15%);
   right : 10% ;
   top : 15% ;
-}
-
-
-.slider-wrap .slider > .etc > .diary-wrap > .paper > .section02 > .img-box{
-  background-image : url(https://raw.githubusercontent.com/leeyoounjung/Portfolio/6dd7ae50d0e9ef3acb262608f175270cf523744a/%EC%8B%A0%EC%9D%98%EB%B6%84%EB%85%B8_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg) ;
 }
 
 .slider-wrap .slider > .etc > .diary-wrap > .paper > .section03{
@@ -710,20 +759,11 @@ a{
   left : 10% ;
 }
 
-
-.slider-wrap .slider > .etc > .diary-wrap > .paper > .section03 > .img-box{
-  background-image : url(https://raw.githubusercontent.com/leeyoounjung/Portfolio/6dd7ae50d0e9ef3acb262608f175270cf523744a/%EB%84%A4%EC%98%A8%EC%82%AC%EC%9D%B8_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg) ;
-}
-
 .slider-wrap .slider > .etc > .diary-wrap > .paper > .section04{
   position : absolute ;
   transform : rotate(16deg) translate(-5%,-7%);
   bottom : 7% ;
   right : 5% ;
-}
-
-.slider-wrap .slider > .etc > .diary-wrap > .paper > .section04 > .img-box{
-  background-image : url(https://raw.githubusercontent.com/leeyoounjung/Portfolio/6dd7ae50d0e9ef3acb262608f175270cf523744a/%ED%9C%B4%EA%B0%80%EC%A4%91%EC%9D%B8%20%EB%9E%8C%EC%A5%90_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg) ;
 }
 
 .slider-wrap .slider > .etc > .diary-wrap > .paper > .section04 > .img-box{
@@ -743,20 +783,19 @@ a{
   left : 50% ;
 }
 
-.slider-wrap .slider > .etc > .diary-wrap > .paper > .section05 > .img-box{
-  background-image : url(https://raw.githubusercontent.com/leeyoounjung/Portfolio/6dd7ae50d0e9ef3acb262608f175270cf523744a/%EC%BB%A4%ED%8A%BC%EC%97%AC%EB%8A%94%20%EC%97%AC%EC%9E%90_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg) ;
-}
-
 .slider-wrap .slider > .etc > .diary-wrap > .paper > .section > .img-box{
   width : 100% ;
   height : 75% ;
   background-color : yellow ;
   position : absolute ;
   box-sizing : border-box ;
-  cursor : pointer ;
   background-position : center ;
   background-repeat : no-repeat ;
   background-size : cover ;
+}
+
+.slider-wrap .slider > .etc > .diary-wrap > .paper > .section > .img-box > img{
+  width : 100% ;
 }
 
 .slider-wrap .slider > .etc > .diary-wrap > .paper > .section > .txt-box{
