--- a/Portfolio.css
+++ b/Portfolio.css
@@ -52,7 +52,7 @@ a{
   font-size : 20px ;
   text-align : center ;
   width : 13% ;
-  background-color : green ;
+  background-color : rgba(244,239,236) ;
   top : 50% ;
   transform : translatey(-50%) ;
   z-index : 9999 ;
@@ -71,7 +71,12 @@ a{
 .slider-wrap .slider > .move-menu > ul > li{
   padding-top : 10% ; 
   padding-bottom : 10% ;
-  border : 1px black solid ;
+  border : 3px rgba(221,183,172) solid ;
+  border-bottom : 0 ;
+}
+
+.slider-wrap .slider > .move-menu > ul > li:last-child{
+  border-bottom : 3px rgba(221,183,172) solid ;
 }
 /* move-menu end */
 /* first-chapter start */
@@ -116,18 +121,6 @@ a{
   transform: translate(-30%) rotate(20deg);
 }
 
-/* .slider-wrap .slider > .first-chapter > .diary > .right{
-  width : 10% ;
-  padding-bottom : 50% ;
-  box-sizing : border-box ;
-} */
-
-/* 
-.slider-wrap > .slider > .first-chapter > .diary > .menu{
-  box-sizing : border-box ;
-  text-align : center ;
-}  */
-
 .slider-wrap .slider > .first-chapter > .diary > .menu > ul{
   position : absolute ;
   top : 50% ;
@@ -140,38 +133,32 @@ a{
 .slider-wrap .slider > .first-chapter > .diary > .menu > ul > li{
 /*   padding-bottom : 20% ; */
   height : 50px ;
-  border : 1px black solid ;
+  border : 3px rgba(221,183,172) solid ;
+  background-color : rgba(244,239,236) ;
+  border-bottom : 0 ;
 }
 
-.slider-wrap .slider > .first-chapter > .diary > .menu > ul > li:nth-child(1) {
-  background-color : rgba(224, 34, 44) ;
-}
-
-.slider-wrap .slider > .first-chapter > .diary > .menu > ul > li:nth-child(2) {
-  background-color : rgba(249 , 160, 102) ;
-}
-
-.slider-wrap .slider > .first-chapter > .diary > .menu > ul > li:nth-child(3) {
-  background-color : rgba(208, 76, 149) ;
-}
-
-.slider-wrap .slider > .first-chapter > .diary > .menu > ul > li:nth-child(4) {
-  background-color : rgba(248, 228, 71) ;
+.slider-wrap .slider > .first-chapter > .diary > .menu > ul > li:last-child{
+  border-bottom : 3px  rgba(221,183,172) solid;
 }
 
 .slider-wrap .slider > .first-chapter > .diary > .menu > ul > li:nth-child(5) {
-  background-color : rgba(154, 203, 96) ;
   line-height : 300% ;
 }
 
 .slider-wrap .slider > .first-chapter > .diary > .menu > ul > li:nth-child(6) {
-  background-color : rgba(51, 175, 227) ;
   line-height : 300% ;
 }
 
+.slider-wrap .slider > .first-chapter > .pen{
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width : 110px ;
+  height: 500px;
+}
+
 .slider-wrap .slider > .first-chapter > .pen01{
-  width : 5% ;
-  padding-bottom : 30% ;
   background-color : gray ;
   position : absolute ;
   top : 50% ;
@@ -180,8 +167,6 @@ a{
 }
 
 .slider-wrap .slider > .first-chapter > .pen02{
-  width : 5% ;
-  padding-bottom : 30% ;
   background-color : gray ;
   position : absolute ;
   top : 50% ;
@@ -190,8 +175,6 @@ a{
 }
 
 .slider-wrap .slider > .first-chapter > .pen03{
-  width : 5% ;
-  padding-bottom : 30% ;
   background-color : gray ;
   position : absolute ;
   top : 30% ;
@@ -249,7 +232,7 @@ a{
 }
 
 .slider-wrap .slider > .personal-data > .data-box > .txt-wrap > .txt-bar{
-  border-bottom : 5px rgba(241,185,185) solid ;
+  border-bottom : 3px rgba(221,183,172) solid ;
 }
 
 .slider-wrap .slider > .personal-data > .data-box > .txt-wrap > .txt-bar > p{
@@ -286,7 +269,7 @@ a{
   left : 50% ;
   transform : translate(-50%,-50%) ;
   box-sizing : border-box ;
-  background-color : rgba(241,185,185) ;
+  background-color : rgba(240,217,209) ;
   position : relative ;
   overflow : hidden ;
 }
@@ -299,7 +282,7 @@ a{
   left : 50% ;
   transform : translate(-50%,-50%) ;
   box-sizing : border-box ;
-  background-color : rgba(254,234,234) ;
+  background-color : rgba(244,239,236) ;
 }
 
 .slider-wrap .slider > .other-data > .diary-wrap > .paper > .btn-wrap{
@@ -355,7 +338,7 @@ a{
 .slider-wrap .slider > .other-data > .diary-wrap > .paper > .list > .txt-wrap > .txt-bar > .box{
   width : 30px ;
   height : 30px ;
-  background-color : rgba(241,185,185) ;
+  background-color : rgba(221,183,172) ;
   margin-right : 20% ;
   margin-left : 5% ;
   border-radius : 50% ;
@@ -429,20 +412,25 @@ a{
   width: 10%;
   transition : 1s ;
   text-align : right ;
+  line-height : 200% ;
 }
 
 .slider-wrap .slider > .other-data > .diary-wrap > .paper03 > .skill-bar > .photoshop.active{
   width : 60% ;
 }
+
 .slider-wrap .slider > .other-data > .diary-wrap > .paper03 > .skill-bar > .illustration.active{
   width : 60% ;
 }
+
 .slider-wrap .slider > .other-data > .diary-wrap > .paper03 > .skill-bar > .html.active{
   width : 70% ;
 }
+
 .slider-wrap .slider > .other-data > .diary-wrap > .paper03 > .skill-bar > .css.active{
   width : 75% ;
 }
+
 .slider-wrap .slider > .other-data > .diary-wrap > .paper03 > .skill-bar > .js.active{
   width : 40% ;
 }
@@ -471,7 +459,7 @@ a{
   left : 50% ;
   transform : translate(-50%,-50%) ;
   box-sizing : border-box ;
-  background-color : rgba(241,185,185) ;
+  background-color : rgba(240,217,209) ;
 /*   position : relative ; */
   z-index : 9 ;
 }
@@ -484,7 +472,7 @@ a{
   left : 50% ;
   transform : translate(-50%,-50%) ;
   box-sizing : border-box ;
-  background-color : rgba(254,234,234) ;
+  background-color : rgba(244,239,236) ;
 }
 
 .slider-wrap .slider > .web-project > .diary-wrap > .paper > .txt-wrap{
@@ -566,7 +554,7 @@ a{
   width : 100% ;
   height : 10% ;
   box-sizing : border-box ;
-  border-bottom : 2px black solid ;
+  border-bottom : 3px rgba(221,183,172) solid ;
   line-height : 480% ;
 }
 
@@ -578,7 +566,7 @@ a{
   left : 55% ;
   transform : translate(-55%,-55%) ;
   box-sizing : border-box ;
-  background-color : gray ;
+  background-color : rgba(153,155,133) ;
   z-index : 0 ;
 }
 /* web-project end */
@@ -601,7 +589,7 @@ a{
 .slider-wrap .slider > .art-work > .diary-wrap{
   width : 70% ;
   padding-bottom : 45% ;
-  background-color : rgba(241,185,185) ;
+  background-color : rgba(240,217,209) ;
   position : absolute ;
   top : 50% ;
   left : 70% ;
@@ -611,7 +599,7 @@ a{
 .slider-wrap .slider > .art-work > .diary-wrap > .paper{
   width : 90% ;
   height : 90% ;
-  background-color : rgba(254,234,234) ;
+  background-color : rgba(244,239,236) ;
   position : absolute ;
   top : 50% ;
   left : 50% ;
@@ -622,7 +610,7 @@ a{
   width : calc(100%/3) ;
   height : 100% ;
   box-sizing : border-box ;
-  border-right : 1px black solid ;
+  border-right : 3px rgba(221,183,172) solid ;
 }
 
 .slider-wrap .slider > .art-work > .diary-wrap > .paper > .section:last-child{
@@ -634,7 +622,7 @@ a{
   height : 25% ;
   position : relative ;
   box-sizing : border-box ;
-  border-bottom : 1px solid black ;
+  border-bottom : 3px solid rgba(221,183,172) ;
 }
 
 .slider-wrap .slider > .art-work > .diary-wrap > .paper > .section > .img-wrap > .img-box{
@@ -672,7 +660,7 @@ a{
 .slider-wrap .slider > .art-work > .diary-wrap > .paper > .section > .txt-wrap > .txt-box > .wrap > .box{
   width : 30px ;
   height : 30px ;
-  background-color : rgba(241,185,185) ;
+  background-color : rgba(221,183,172) ;
   margin-left : 5% ;
   margin-right : 5% ;
   margin-top : 15% ;
@@ -754,7 +742,7 @@ a{
 .slider-wrap .slider > .etc > .diary-wrap{
   width : 70% ;
   padding-bottom : 45% ;
-  background-color : rgba(241,185,185) ;
+  background-color : rgba(240,217,209) ;
   position : absolute ;
   top : 50% ;
   left : 70% ;
@@ -764,7 +752,7 @@ a{
 .slider-wrap .slider > .etc > .diary-wrap > .paper{
   width : 90% ;
   height : 90% ;
-  background-color : rgba(254,234,234) ;
+  background-color : rgba(244,239,236) ;
   position : absolute ;
   top : 50% ;
   left : 50% ;
@@ -956,21 +944,6 @@ a{
   box-sizing : border-box ;
 }
 
-/* .slider-wrap .slider > .last-chapter > .diary > .right{
-  width : 10% ;
-  padding-bottom : 50% ;
-  box-sizing : border-box ;
-} */
-
-/* .slider-wrap .slider > .last-chapter > .diary > .menu{
-  width : 20% ;
-  height : 100% ;
-  position : absolute ;
-  left : -20% ;
-  box-sizing : border-box ;
-  text-align : center ;
-}  */
-
 .slider-wrap .slider > .last-chapter > .diary > .menu > ul{
   position : absolute ;
   top : 50% ;
@@ -984,32 +957,20 @@ a{
 .slider-wrap .slider > .last-chapter > .diary > .menu > ul > li{
 /*   padding-bottom : 20% ; */
   height : 50px ;
-  border : 1px black solid ;
+  border : 3px rgba(221,183,172) solid ;
+  border-bottom : 0 ;
+  background-color : rgba(244,239,236) ;
 }
 
-.slider-wrap .slider > .last-chapter > .diary > .menu > ul > li:nth-child(1) {
-  background-color : rgba(224, 34, 44) ;
-}
-
-.slider-wrap .slider > .last-chapter > .diary > .menu > ul > li:nth-child(2) {
-  background-color : rgba(249 , 160, 102) ;
-}
-
-.slider-wrap .slider > .last-chapter > .diary > .menu > ul > li:nth-child(3) {
-  background-color : rgba(208, 76, 149) ;
-}
-
-.slider-wrap .slider > .last-chapter > .diary > .menu > ul > li:nth-child(4) {
-  background-color : rgba(248, 228, 71) ;
+.slider-wrap .slider > .last-chapter > .diary > .menu > ul > li:last-child{
+  border-bottom : 3px rgba(221,183,172) solid ;
 }
 
 .slider-wrap .slider > .last-chapter > .diary > .menu > ul > li:nth-child(5) {
-  background-color : rgba(154, 203, 96) ;
   line-height : 300% ;
 }
 
 .slider-wrap .slider > .last-chapter > .diary > .menu > ul > li:nth-child(6) {
-  background-color : rgba(51, 175, 227) ;
   line-height : 300% ;
 }
 
